@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tk.h,v 1.70 2002/09/12 17:34:15 das Exp $
+ * RCS: @(#) $Id: tk.h,v 1.71 2002/09/14 02:52:36 andreas_kupries Exp $
  */
 
 #ifndef _TK
@@ -53,18 +53,6 @@ extern "C" {
 #define TK_VERSION	"8.4"
 #define TK_PATCH_LEVEL	"8.4.0"
 
-/* 
- * A special definition used to allow this header file to be included
- * from windows or mac resource files so that they can obtain version
- * information.  RC_INVOKED is defined by default by the windows RC tool
- * and manually set for macintosh.
- *
- * Resource compilers don't like all the C stuff, like typedefs and
- * procedure declarations, that occur below, so block them out.
- */
-    
-#ifndef RC_INVOKED
-    
 /*
  * The following definitions set up the proper options for Macintosh
  * compilers.  We use this method because there is no autoconf equivalent.
@@ -83,6 +71,18 @@ extern "C" {
 #   endif
 #endif
 
+/* 
+ * A special definition used to allow this header file to be included
+ * from windows or mac resource files so that they can obtain version
+ * information.  RC_INVOKED is defined by default by the windows RC tool
+ * and manually set for macintosh.
+ *
+ * Resource compilers don't like all the C stuff, like typedefs and
+ * procedure declarations, that occur below, so block them out.
+ */
+    
+#ifndef RC_INVOKED
+    
 #ifndef _XLIB_H
 #   if defined (MAC_TCL)
 #	include <Xlib.h>
